@@ -284,6 +284,7 @@ util/grub.d/00_header.in
 util/grub.d/10_hurd.in
 util/grub.d/10_linux.in
 util/grub.d/README
+util/elf/grub-mkimage.c
 util/i386/efi/grub-install.in
 util/i386/efi/grub-mkimage.c
 util/i386/get_disk_name.c
@@ -294,7 +295,6 @@ util/i386/pc/misc.c
 util/i386/pc/grub-mkrescue.in
 util/ieee1275/get_disk_name.c
 util/powerpc/ieee1275/grub-install.in
-util/powerpc/ieee1275/grub-mkimage.c
 util/powerpc/ieee1275/misc.c
 video/bitmap.c
 video/video.c
